[package]
name = "pydestiny"
version = "0.1.0"
authors = ["Marc Chesebro <marc.chesebro@gmail.com>"]
edition = "2018"
description = "A python wrapper for the rust crate destiny. A library for rolling dice and calculating dice distributions."
license = "MIT"

repository = "https://github.com/MarcChesebro/pydestiny"
readme = "./README.md"

[lib]
name = "pydestiny"
crate-type = ["cdylib"]

[dependencies]
destiny = "0.2.1"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]